--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,44 @@
-body {
-    display:flex; flex-direction:column; justify-content:center;
-    min-height:100vh;
-  }
-
-*{
-      font-family: 'Source Sans Pro', sans-serif;
-    }
-    h1{
-      font-weight: 900;
-    }
-    
-     .page{
-       width: 850px;    
-       background-color: white;   
-       margin: auto;
-       padding: 50px;
-       padding-top: 35px;
-    }
-    .vis-container{
-      width: 100%;
-    }
-    .description h2, h1{
-      margin-top:0px;
-    }
-    .description-right {
-      padding-left: 20px;
-    }
-    .description-left{
-      padding-right: 20px;
-    }
-    .pure-g{
-      margin-bottom: 25px;
-    }
-    .small-font{
-        font-size: 14px;
-    }
+.header-container {
+  display: flex;
+  justify-content: center;
+}
 
 .header {
-    background-color: #076286;
-    text-align: left;
-    padding-left: 20px;
-    padding-top: 10px;
+  background: linear-gradient(0deg, rgb(139, 65, 224) 0%, rgb(1, 1, 138) 50%);
+  text-align: center;
+  font-size: large;
+  color: white;
+  width: 100%;
+  height: 140px;
 }
 
-.header-text {
-    padding-top: 15px;
+.nav-element {
+  background: linear-gradient(0deg, rgb(201, 200, 212) 0%, rgb(39, 39, 46) 50%);
+  font-size: x-large;
+  color: white;
+  text-decoration: none;
+  padding: 5px;
 }
 
-img {
-    height: 60px;
-    float: left;
-    padding-right: 20px;
+.line {
+  width: 100%;
+  height: 10px;
+  background: linear-gradient(0deg, rgb(5, 2, 34) 0%, rgb(36, 36, 155) 50%);
+}
+
+.title {
+  font-size: xx-large;
+  padding: 0px;
+}
+.subtitle {
+  font-size: x-small;
+  padding: 0px;
+}
+
+.contents {
+  background-color: coral;
+  width: 50%;
+  height: auto;
+  margin: 0 auto;
+  position: relative;
 }
