HTML/CSS + Fixed data

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 
 .nav-element {
   background: linear-gradient(0deg, rgb(201, 200, 212) 0%, rgb(39, 39, 46) 50%);
-  font-size: x-large;
+  font-size: large;
   color: white;
   text-decoration: none;
   padding: 5px;
@@ -32,13 +32,43 @@
 }
 .subtitle {
   font-size: x-small;
-  padding: 0px;
+  padding-bottom: 10px;
 }
 
 .contents {
-  background-color: coral;
+  background-color: gainsboro;
   width: 50%;
   height: auto;
   margin: 0 auto;
   position: relative;
+}
+
+#vis1, #vis2, #vis3 {
+  width: 80%;
+  height: auto;
+  margin: 0 auto;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  background-color: cornflowerblue;
+  border: 1px solid black;
+}
+
+.footer {
+  background: linear-gradient(0deg, rgb(139, 65, 224) 0%, rgb(1, 1, 138) 50%);
+  text-align: center;
+  color: white;
+}
+
+h2 {
+  padding: 0px;
+  margin: 0px;
+}
+
+p {
+  margin: 0px;
+}
+
+.content-1, .content-2, .content-3, .content-4, .content-5 {
+  padding-bottom: 30px;
 }
