--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ p{
   padding-bottom: 20px;
 }
 
-.content-2, .content-3, .content-4 {
+.content-2, .content-3, .content-4, .content-5 {
   padding-bottom: 20px;
 }
 
