--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,8 @@ body {
   padding: 20px;
 }
 
-#vis1, #vis2, #vis3 {
+#vis1, #vis2, #vis3, #vis4 {
   background-color: white;
-  border: 1px solid black;
   padding: 10px;
   width: 80%;
   display:block;
