--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,16 @@ body {
   justify-content: center;
 }
 
+img {
+  width: 100%;
+}
 .header {
-  background: linear-gradient(0deg, rgb(139, 65, 224) 0%, rgb(1, 1, 138) 50%);
   text-align: center;
   font-size: large;
   color: white;
   width: 100%;
-  height: 140px;
+  height: 276.2px;
+  position: relative;
 }
 
 .nav-element {
@@ -31,12 +34,20 @@ body {
 }
 
 .title {
+  position: absolute;
   font-size: xx-large;
   padding: 0px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .subtitle {
   font-size: x-small;
-  padding-bottom: 10px;
+  position: absolute;
+  padding: 0px;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .contents {
@@ -57,9 +68,10 @@ body {
 }
 
 .footer {
-  background: linear-gradient(0deg, rgb(139, 65, 224) 0%, rgb(1, 1, 138) 50%);
+  background: rgba(8, 12, 206, 0.753);
   text-align: center;
   color: white;
+  line-height: 1.15em;
 }
 
 h2 {
@@ -86,7 +98,7 @@ p{
   background: none;
 }
 
-#vis3 {
+#vis3, #vis4 {
   display: flex;
   justify-content: center;
 }
