--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,8 @@ img {
 
 .line {
   width: 100%;
-  height: 10px;
-  background: linear-gradient(0deg, rgb(5, 2, 34) 0%, rgb(36, 36, 155) 50%);
+  height: 5px;
+  background: linear-gradient(0deg, rgb(5, 2, 34) 0%, rgb(13, 13, 73) 50%);
 }
 
 .title {
@@ -63,13 +63,13 @@ img {
 }
 
 .footer {
-  background: rgba(8, 12, 206, 0.753);
+  background: rgb(32, 32, 41);
   text-align: center;
   color: white;
   line-height: 1.15em;
 }
 
-h2, h3 {
+h2, h3, h4 {
   padding: 0px;
   margin: 0px;
 }
@@ -93,6 +93,10 @@ p{
   background: none;
 }
 
-p, h1, h2, h3 {
+p, h1, h2, h3, h4, .footer {
   font-family: 'Work Sans', sans-serif;
+}
+
+h4 {
+  font-size: large;
 }
